Bug 69652 - EDITING: Default date could not be set in a date-field of a form
Summary: EDITING: Default date could not be set in a date-field of a form
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Base (show other bugs)
Version:
(earliest affected)
4.1.1.1 rc
Hardware: Other All
: medium normal
Assignee: Lionel Elie Mamane
URL:
Whiteboard: target:4.3.0 target:4.2.1 target:4.1.6
Keywords: regression
Depends on:
Blocks:
 
Reported: 2013-09-21 16:42 UTC by Robert Großkopf
Modified: 2014-02-05 16:32 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Database: Open the form for editing, right click on the date-field - default is empty since LO 4.1.1 (13.21 KB, application/vnd.oasis.opendocument.base)
2013-09-21 16:42 UTC, Robert Großkopf
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Robert Großkopf 2013-09-21 16:42:11 UTC
Created attachment 86270 [details]
Database: Open the form for editing, right click on the date-field - default is empty since LO 4.1.1

Open the attached database.
Open the form for editing.
The date-field shows a default-date. I have tried to create this with LO 4.1.1 -didn't work. But the default-date could be seen in LO 4.1.1, created by LO 4.1.0.3.
Right mouse-click on the date-field and have a look at the properties of this field. The default-date seem to be empty since LO 4.1.1.*
Comment 1 Michael Stahl 2014-02-05 11:53:31 UTC
is that the famous API change or some other breakage?
Comment 2 Lionel Elie Mamane 2014-02-05 14:02:18 UTC
a dbgutil build (of 4-2) says:

warn:legacy.osl:28554:1:xmloff/source/forms/elementimport.cxx:290: OElementImport::implApplySpecificProperties: could not set the properties (using the XMultiPropertySet)!
warn:legacy.osl:28554:1:xmloff/source/forms/elementimport.cxx:291: caught an exception!
in function:void xmloff::OElementImport::implApplySpecificProperties()
type: com.sun.star.lang.IllegalArgumentException

warn:legacy.osl:28554:1:xmloff/source/forms/elementimport.cxx:313: OElementImport::implApplySpecificProperties: could not set the property "DefaultDate"!
warn:legacy.osl:28554:1:xmloff/source/forms/elementimport.cxx:314: caught an exception!
in function:void xmloff::OElementImport::implApplySpecificProperties()
type: com.sun.star.lang.IllegalArgumentException

when opening the form for edit.
Comment 3 Lionel Elie Mamane 2014-02-05 14:10:55 UTC
The file contains a date for the DefaultDate property (xml attribute "value"), but the property somehow expects an integer (in frm::OEditBaseModel::convertFastPropertyValue).
Comment 4 Lionel Elie Mamane 2014-02-05 14:36:46 UTC
(In reply to comment #3)
> The file contains a date for the DefaultDate property (xml attribute
> "value"), but the property somehow expects an integer (in
> frm::OEditBaseModel::convertFastPropertyValue).

and this was changed in libreoffice-4-1 by

 commit 43ea97e1f9cecd6c7cba8db35ce1307c858c6857
 Author: Lionel Elie Mamane <lionel@mamane.lu>
 Date:   Sun Jul 28 16:08:26 2013 +0200

    fdo#67235 adapt form control code to time nanosecond API change
    
    squash of steps 1, 2 and 3 in master

and in master (before 4-2 branch point) by

commit 8ee69b0ba13f74d1515fac71df92947eb6328ab1
Author: Lionel Elie Mamane <lionel@mamane.lu>
Date:   Sun Aug 4 01:14:22 2013 +0200

    fdo#67235 adapt form control code to time nanosecond API change, step 3
Comment 5 Commit Notification 2014-02-05 16:29:21 UTC
Lionel Elie Mamane committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=f5c7e770314826c121fb6a03d56f424d308e1e2f

fdo#69652 Default(Date|Time) is a UNO struct now



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2014-02-05 16:31:41 UTC
Lionel Elie Mamane committed a patch related to this issue.
It has been pushed to "libreoffice-4-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=8e8827a2d092810394c819c536d48b74080abce8&h=libreoffice-4-2

fdo#69652 Default(Date|Time) is a UNO struct now


It will be available in LibreOffice 4.2.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2014-02-05 16:32:58 UTC
Lionel Elie Mamane committed a patch related to this issue.
It has been pushed to "libreoffice-4-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=24c01fae1c9ad1ced40f29660468f4464ce35e26&h=libreoffice-4-1

fdo#69652 Default(Date|Time) is a UNO struct now


It will be available in LibreOffice 4.1.6.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.