fdo#69652 Default(Date|Time) is a UNO struct now

Changed to UNO struct from integer by
  fdo#67235 adapt form control code to time nanosecond API change

Change-Id: I5817d44438d70a0da534c03afd22d74a311252f5
Reviewed-on: https://gerrit.libreoffice.org/7882
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>